--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
         <div class="serv">
         <div class="service">
           <!-- Изображение для услуги "Разнообразные игровые залы" -->
-          <img src="img/zal.PNG" alt="Разнообразные игровые залы">
+          <img src="img/zal.png" alt="Разнообразные игровые залы">
           <h3>Разнообразные игровые залы</h3>
           <p>Мы предлагаем широкий выбор игровых залов, подходящих для различных аудиторий, от любителей ретро-игр до поклонников передовых технологий. Наши залы предлагают различные игровые предпочтения и атмосферы для уникального опыта каждого посетителя.</p>
         </div>
         <div class="service">
           <!-- Изображение для услуги "Великолепная кухня" -->
-          <img src="img/kitchen.PNG" alt="Великолепная кухня">
+          <img src="img/kitchen.png" alt="Великолепная кухня">
           <h3>Великолепная кухня</h3>
           <p>Насладитесь нашей восхитительной кухней во время игры. От быстрых закусок до полноценных блюд - наше меню разработано для удовлетворения ваших желаний. Полюбуйтесь широким выбором блюд и напитков, созданных для улучшения вашего игрового опыта.</p>
         </div>
         <div class="service">
           <!-- Изображение для услуги "Превосходное оборудование и аксессуары" -->
-          <img  src="img/hardware_gear.PNG" alt="Превосходное оборудование и аксессуары">
+          <img  src="img/hardware_gear.png" alt="Превосходное оборудование и аксессуары">
           <h3>Превосходное оборудование и аксессуары</h3>
           <p>Погрузитесь в мир игры с нашим премиальным оборудованием и аксессуарами. Мы предоставляем премиальные игровые устройства и передовые технологии для оптимальной производительности и погружения, позволяющие вам улучшить свои игровые навыки.</p>
         </div>
